[gd_scene load_steps=3 format=3 uid="uid://dfvjhw5v6tqqi"]

[ext_resource type="Texture2D" uid="uid://5oy44m8a0p4f" path="res://Images/domination.svg" id="1_d1exw"]
[ext_resource type="Script" path="res://Interface/Spells/spell_icon.gd" id="2_dkj7e"]

[node name="SpellIcon" type="TextureRect"]
custom_minimum_size = Vector2(80, 80)
texture = ExtResource("1_d1exw")
expand_mode = 1
script = ExtResource("2_dkj7e")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
